collapse-style.css
* {
  box-sizing: border-box;
  margin: 0;
}

body {
  font-family: Raleway;
}

/* Style the form */
form {
  border-radius: 5px;
  background-color: #f2f2f2;
  padding: 20px;
  margin-left: 20px;
  width: 800px;
  font-family: Raleway;
}

input {
  font-size: 17px;
  font-family: Raleway;
}

input[type=submit]{
  width: 100%;
  background-color: #333;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: large;
}
input[type=submit]:hover {
  /*background-color: #45a049;*/
  background-color: #6e6e6e;
}

input[type=text],[type=tel], textarea {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 17px;
  font-family: Raleway;
}

/* Style the Nav Bar */
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 5px;
  width: 15%;
  background-color: #333;
  position: fixed;
  height: 100%;
  overflow: auto;
}

li a {
  display: block;
  color: #000;
  padding: 8px 16px;
  text-decoration: none;
  color: white;
}

li a.active {
  background-color: #4CAF50;
  color: white;
}

li a:hover:not(.active) {
  background-color: #555;
  color: white;
}

/* Style the collapsible */
.collapsible {
  background-color: #777;
  color: white;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
}

.active, .collapsible:hover {
  background-color: #555;
}

.content {
  padding: 0 18px;
  display: none;
  overflow: hidden;
  background-color: #f1f1f1;
  padding-top: 20px;
}

.custom-select {
  position: relative;
}
.custom-select select {
  display: none; /*hide original SELECT element */
}
.select-selected {
  background-color: #333;
}
/*style the arrow inside the select element */
.select-selected:after {
  position: absolute;
  content: "";
  top: 35px;
  right: 10px;
  width: 0;
  height: 0;
  border: 6px solid transparent;
  border-color: #fff transparent transparent transparent;
}
/*point the arrow upwards when the select box is open (active) */
.select-selected.select-arrow-active:after {
  border-color: transparent transparent #fff transparent;
  top: 30px;
}

/*style the items (options), including the selected item */
.select-items div,.select-selected {
  color: #ffffff;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
  cursor: pointer;
  user-select: none;
}
/*hide the items when the select box is closed */
.select-hide {
  display: none;
}

.select-items div:hover, .same-as-selected {
  background-color: #6e6e6e;
}

/*style items (options) */
.select-items {
  position: absolute;
  background-color: #333;
  top: 100%;
  left: 0;
  right: 0;
  z-index: 99;
}

/* Style the scroll to top button */
#scroll-to-top-btn {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 99;
  font-size: 18px;
  border: none;
  outline: none;
  background-color: red;
  color: white;
  cursor: pointer;
  padding: 15px;
  border-radius: 4px;
}

#scroll-to-top-btn:hover {
  background-color: #555;
}

